# realsense-timestamping-fsync

./: CMakeLists.txt  Makefile  README.md  architecture.mmd
app/: realsense-symlink.rules
docs/: README.md
output/: README.md
resources /: architecture.mmd  realsense-docs.txt
rules/: realsense-symlink.rules
scripts/: README.md  enable_fsync.sh  fsync_check.sh
scripts/services/: disable-fsync.sh  fsync-pwm.service  install_services.sh
src/: main.cpp
src/utils/: realsense_populating.cpp  realsense_populating.h  realsense_streaming.cpp  realsense_streaming.h
